unpackaged/main/default/objects/nbavs__License__c/nbavs__License__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>License Deprecated</label>
</CustomObject>