unpackaged/main/default/objects/nbavs__License__c/fields/nbavs__AVS_Provisioned__c.field-meta.xml
<CustomField>
    <fullName>nbavs__AVS_Provisioned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Provisioned</label>
    <type>Checkbox</type>
</CustomField>