unpackaged/main/default/objects/nbavs__License__c/fields/nbavs__CTI_Count__c.field-meta.xml
<CustomField>
    <fullName>nbavs__CTI_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CTI Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>