unpackaged/main/default/objects/nbavs__License__c/fields/nbavs__Freedom__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Freedom__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Freedom</label>
    <type>Checkbox</type>
</CustomField>