unpackaged/main/default/objects/nbavs__License__c/fields/nbavs__Freedom_Count__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Freedom_Count__c</fullName>
    <label>Freedom Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>