unpackaged/main/default/objects/nbavs__License__c/fields/nbavs__Global__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Global__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Global Calls</label>
    <type>Checkbox</type>
</CustomField>