unpackaged/main/default/objects/nbavs__License__c/fields/nbavs__TrialExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>nbavs__TrialExpirationDate__c</fullName>
    <label>Trial Expiration Date</label>
    <type>Date</type>
</CustomField>