unpackaged/main/default/objects/nbavs__License__c/fields/nbavs__Updated__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Updated__c</fullName>
    <label>Updated</label>
    <type>DateTime</type>
</CustomField>